@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #1b7add;
-  min-height: 100vh;
+  height: 100lvh;
   
   display: flex;
   flex-direction: column;
@@ -76,7 +76,11 @@ a{
 }
 
 .sessionDataTable td{
-  /* padding: 2px; */
+  font-size: 1em;
+  text-align: center;
+  
+  padding-left: 5px;
+  padding-right: 5px;
   border: 0.5px solid white;
 }
 
@@ -99,16 +103,10 @@ a{
 }
 @keyframes slide_animation{
   0% {left: 0em;}
-  
-  10% {left: 0em;}
-  25% {left: -49.8em;}
-  
-
-  50% {left: -49.8em;}
-  
-  75% {left: -49.8em;}
-  
-  90% {left: -99.5em;}
+  20% {left: 0em;}
+  35% {left: -49.8em;}
+  55% {left: -49.8em;}
+  70% {left: -99.5em;}
   100% {left: -99.5em;}
 }
 
@@ -116,7 +114,7 @@ a{
   width: 5100px;
   height: 800px;
   margin: 0 0 0 - 2400px;
-   position: relative; 
+  position: relative; 
   
   
 
@@ -125,7 +123,7 @@ a{
    animation-name: slide_animation;
   animation-duration: 15s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
+  animation-direction:normal;
   animation-play-state: running;  
 }
 
