@@ -1,0 +1,5 @@
+const Footer = () => {
+  return <div>[Event name] powered by inSession.</div>;
+};
+
+export default Footer;
